Fix contacts style, message overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ li {
     list-style: none;
 }
 
-body {
+.container-bg {
     height: 100vh;
     background-image: linear-gradient(to bottom,
             #009688 15%,
@@ -33,13 +33,16 @@ body {
     overflow: hidden;
 }
 
-.contacts {
+.contacts,
+.chat {
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .profile,
 .chat-contact {
-    height: 8%;
+    flex: 0 0 8%;
     background-color: #EAEAEA;
 }
 
@@ -83,8 +86,8 @@ body {
 }
 
 .notification {
+    flex: 0 0 9%;
     padding-inline: 20px;
-    height: 9%;
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -117,8 +120,8 @@ body {
 }
 
 .search {
+    flex: 0 0 6%;
     padding-inline: 10px;
-    height: 6%;
     display: grid;
     place-items: center;
     background-color: #EAEAEA;
@@ -146,7 +149,7 @@ body {
 }
 
 .contact-list {
-    height: 77%;
+    flex: 1 0 0;
     overflow-y: scroll;
 }
 
@@ -191,9 +194,7 @@ body {
 }
 
 .chat {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    border-inline-start: 1px solid rgb(200, 200, 200);
 }
 
 .chat-contact {
@@ -201,7 +202,6 @@ body {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    border-inline-start: 1px solid rgb(200, 200, 200);
 }
 
 .chat-contact>img {
@@ -225,6 +225,7 @@ body {
 .chat-messages-bg {
     flex: 1 0 0;
     background-image: url("../img/mine.jpg");
+    overflow-y: scroll;
 }
 
 .chat-messages {
@@ -232,22 +233,23 @@ body {
     margin: 0 auto;
     display: flex;
     flex-flow: column;
-    gap: 0.5rem;
+    gap: 0.7rem;
 }
 
 .message {
-    width: 40%;
-    padding: 0.7rem;
+    max-width: 60%;
+    min-width: 40%;
+    padding: 0.7rem 0.7rem 0.8rem;
     border-radius: 0.4rem;
     position: relative;
 }
 
 .message-time {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     color: rgb(200, 200, 200);
     position: absolute;
-    right: 2px;
-    bottom: 2px;
+    right: 5px;
+    bottom: 3px;
 }
 
 .sent {
@@ -261,7 +263,7 @@ body {
 }
 
 .chat-input {
-    height: 9%;
+    flex: 0 0 9%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
